# uds-actor

./: .gitignore  Cargo.toml  README.md  mypy.ini  requirements.txt
.github/: actor_managed.nsi  actor_unmanaged.nsi  requirements.txt
.github/workflows/: build-windows-installer.yml  codeql.yml
assets/scripts/: register-service.ps1  unregister-service.ps1
assets/testcerts/: cert.pem  key.pem
builder/src/: lib.rs
building/: .gitignore
building/linux/: .gitignore  Makefile  build-packages.sh  build.sh  build_rust.py  rustbuilder.py  udsactor-template.spec  udsactor-unmanaged.spec  udsactor.spec
building/macos/: .gitignore  build-pkg.py  build-universal.sh  license.txt
building/windows/: Dockerfile  actor_managed.nsi  build.ps1
client/: Cargo.toml  build.rs
client/src/: deadline.rs  idle.rs  main.rs  platform.rs  rest_api.rs  session.rs  test_utils.rs  ws_reqs.rs
client/src/http/: mod.rs  tests.rs  types.rs
client/src/linux/: mod.rs
client/src/rest/: api.rs  mod.rs  tests.rs  types.rs
client/src/tasks/: alive.rs  deadline.rs  idle.rs  mod.rs  signals.rs
client/src/testing/: dummy.rs  fake.rs  mock.rs
client/src/tests/: fake.rs  mod.rs
client/src/unix/: mod.rs
client/src/windows/: event.rs  messages.rs  mod.rs  safe.rs
client/src/workers/: alive.rs  logoff.rs  mod.rs  pong.rs  screenshot.rs
client/src/ws_workers/: alive.rs  logoff.rs  mod.rs  pong.rs  screenshot.rs
config/: Cargo.toml  build.rs
config-unmanaged/: Cargo.toml  build.rs
config-unmanaged/fluid/: config-unmanaged.fl
config-unmanaged/src/: callbacks.rs  config_unmanaged_fltk.rs  main.rs  regcfg.rs
config/fluid/: config.fl
config/src/: callbacks.rs  config_fltk.rs  main.rs  regcfg.rs
crates/builder/: Cargo.toml
crates/client/: Cargo.toml  build.rs
crates/config/: Cargo.toml  build.rs
crates/config-unmanaged/: Cargo.toml  build.rs
crates/config-unmanaged/fluid/: config-unmanaged.fl
crates/config-unmanaged/src/: callbacks.rs  config.slint  main.rs  regcfg.rs
crates/gui-helper/: Cargo.toml  build.rs
crates/service/: Cargo.toml  build.rs
crates/service/src/: common.rs  computer.rs  main.rs  platform.rs
crates/service/src/actors/: mod.rs  testing.rs
crates/service/src/actors/managed/: mod.rs  tests.rs
crates/service/src/actors/unmanaged/: mod.rs
crates/service/src/testing/: mock.rs
crates/service/src/workers/: mod.rs
crates/service/src/workers/http/: logoff.rs  message.rs  mod.rs  preconnect.rs  screenshot.rs  script.rs  uniqueid.rs
crates/service/src/workers/ws/: close.rs  logger.rs  mod.rs
crates/shared/: Cargo.toml
gui-helper/: Cargo.toml  build.rs
gui-helper/src/: main.rs
linux/: Makefile  build-packages.sh  udsactor-unmanaged-template.spec
linux/debian/: control  rules
linux/scripts/: UDSActorRegister
macos/: notes.txt
macros/: Cargo.toml
macros/src/: lib.rs
notes/: domain-linux.md  env-vars-logging.md  linux.txt  windows-domain-trust-repair.md  windows.txt
notes/macos/: com.virtualcable.udsclient.plist  com.virtualcable.udsserver.plist  notes.txt  schema.txt  signing.txt
service/: Cargo.toml  build.rs
service/scripts/: register-service.ps1
service/src/: actions.rs  common.rs  computer.rs  main.rs  managed.rs  platform.rs  tests.rs  unamanaged.rs
service/src/actors/: testing.rs
service/src/actors/managed/: mod.rs  tests.rs
service/src/rest/: api.rs  consts.rs  mod.rs  tests.rs  types.rs
service/src/testing/: dummy.rs  fake.rs  mock.rs
service/src/workers/: logging.rs  macros.rs  mod.rs
service/src/workers/http/: logoff.rs  message.rs  mod.rs  preconnect.rs  screenshot.rs  script.rs  uniqueid.rs
service/src/workers/ws/: close.rs  logger.rs  login.rs  login_managed.rs  login_unmanaged.rs  logout.rs  mod.rs  ping.rs
shared/: Cargo.toml
shared/src/: actions.rs  config.rs  consts.rs  gui.rs  installer.rs  launcher.rs  lib.rs  log.rs  operations.rs  service.rs  test_utils.rs
shared/src/broker/api/: block.rs  consts.rs  mod.rs  sync.rs  tests.rs  types.rs
shared/src/sync/: event.rs  mod.rs  oncesignal.rs  traits.rs
shared/src/testing/: dummy.rs  fake.rs  mock.rs  mod.rs  test_certs.rs
shared/src/tls/: certool.rs  ciphers.rs  mod.rs
shared/src/unix/: actions.rs  config.rs  event.rs  mod.rs  operations.rs
shared/src/unix/linux/: computer.rs  idle.rs  installer.rs  mod.rs  session.rs  watcher.rs  watcher_gnome.rs  watcher_kde.rs
shared/src/unix/mac/: computer.rs  idle.rs  mod.rs  network.rs
shared/src/unix/operations/: mod.rs
shared/src/unix/operations/renamer/: alt.rs  opensuse.rs  redhat.rs
shared/src/unix/operations_linux/: computer.rs  idle.rs  mod.rs  network.rs  session.rs
shared/src/unix/operations_linux/renamer/: alt.rs  debian.rs  mod.rs  opensuse.rs  redhat.rs
shared/src/unix/operations_mac/: mod.rs  session.rs
shared/src/utils/: network.rs
shared/src/windows/: actions.rs  config.rs  event.rs  installer.rs  messages.rs  mod.rs  msgwindow.rs  operations.rs  safe.rs  service.rs
shared/src/windows/operations/: mod.rs  tests.rs
shared/src/ws/: mod.rs  rcptraits.rs  request_tracker.rs  types.rs
shared/src/ws/client/: mod.rs  request_state.rs  resolver.rs  types.rs
shared/src/ws/server/: mod.rs  routes.rs  test_certs.rs  tests.rs
shared/tests/: event_tests.rs  messagebox_test.rs  test_tls_ciphers.rs  test_ws_server.rs
shared/tests/helpers/: mod.rs
src/: actor_client.py  actor_config.py  actor_config_unmanaged.py  actor_register.py  requirement.txt  requirement_windows.txt  udsactor_service.py
src/designer/: uds_rc.py  updater.py
src/tests/: test_managed_server.py  test_operations.py  test_private_rest.py  test_rest_as_client.py  test_rest_as_server.py  test_service_linux.py  test_service_windows.py
src/udsactor/: abc.py  cert.py  certs.py  client.py  comms.py  consts.py  decorators.py  exceptions.py  (+14 more)
test-server/: mocks.yaml  server.py
testcerts/: cert_pass.pem  combined.pem  key_pass.pem
tests/: test_managed_server.py  test_operations.py  test_private_rest.py  test_rest_as_client.py  test_rest_as_server.py  test_service_linux.py  test_service_windows.py
(+170 files in other folders)
