[workspace]
resolver = "3"

members = [
    "builder",
    "client", 
    "config",
    "config-unmanaged", "gui-helper",
    "service",
    "shared"
]

[profile.release]
opt-level = "z"            # For size (use "s" for speed if size is not critical)
lto = true                 # Link Time Optimization (better optimizations across crates)
codegen-units = 1         # compiles in a single unit to allow for more cross-crate optimization
panic = "unwind"           # removes support for backtraces (reduces size)
strip = "symbols"         # removes debug symbols (requires Rust 1.70+)

