[workspace]
resolver = "3"

members = [
    "crates/builder",
    "crates/client", 
    "crates/config",
    "crates/config-unmanaged", "crates/gui-helper",
    "crates/service",
    "crates/shared"
]

[profile.release]
opt-level = "z"            # For size (use "s" for speed if size is not critical)
lto = true                 # Link Time Optimization (better optimizations across crates)
codegen-units = 1         # compiles in a single unit to allow for more cross-crate optimization
panic = "unwind"           # removes support for backtraces (reduces size)
strip = "symbols"         # removes debug symbols (requires Rust 1.70+)

[workspace.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_SystemInformation",
    "Win32_System_Shutdown",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
    # We need all three for network adapter enumeration
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_Services",
    "Win32_System_EventLog",
    "Win32_System_EventNotificationService",
    "Win32_System_Com_Events",
    "Win32_System_Com",  # For SENS
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
windows-core = "0.62.2"
winres = "0.1.12"

widestring = "1.2.0"

zbus = {version ="5.16", features = ["tokio"] }
whoami = "2.1"
libc = "0.2"
libloading = "0.9.0"
toml = "1.1"

user-idle = "0.6.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "local-time",
] }
tracing-log = "0.2.0"

anyhow = "1.0"
chrono = { version = "0.4" }

reqwest = { version = "0.13", features = [
    "json",
    "rustls",
    "system-proxy",
] }
ipnetwork = "0.21.1"
shlex = "1.3"

# For maintain compat with 4.0, we need to decrypt the pem key
# so we use pkcs8 an pem crates
pkcs8 = { version = "0.10", features = ["encryption"] }
pem = "3.0"

rustls = { version = "0.23", features = ["ring"] }
async-trait = "0.1"
tokio = { version = "1.52", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
    "net",
    "process",
    "signal",
] }
rustls-native-certs = "0.8"
rustls-pki-types = "1.14"
tokio-rustls = "0.26.4"

axum = { version = "0.8", features = ["json", "tokio", "ws"] }
tower-http = { version = "0.7", features = ["trace"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
socket2 = "0.6"  # To disable dual stack on listening, make IPv4 and IPv6 listeners separately

# GUI
slint = { version = "1.16", features=["log", "backend-winit", "renderer-winit-software"] }
slint-build = "1.16"
rfd = "0.17"
# Web services
tokio-tungstenite = { version = "0.29", features = [
    "rustls-tls-native-roots",
] }
futures-util = "0.3.32"

# json & related
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

rand = "0.10"

mockito = "1.7"
tower = "0.5"
hyper = "1.8"
local-ip-address = "0.6"

serial_test = "3.2"
