[package]
name = "uds-actor-client"
version = "5.0.0"
edition = "2024"

[dependencies.macros]
path = "../macros"

[dependencies]
shared = { path = "../shared" }

tokio = { version = "1.47.1", features = ["macros", "rt", "time", "signal", "net"] }

reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

anyhow = "1.0.88"
async-trait = "0.1.89"

axum = { version = "0.8.4", features = ["json", "tokio"] }
base64 = "0.22.1"


[build-dependencies]
builder = { path = "../builder" }


[dev-dependencies]
mockito = "1.7.0"
tower = "0.5.2"
hyper = "1.7.0"

[profile.release]
opt-level = "z"            # For size (use "s" for speed if size is not critical)
lto = true                 # Link Time Optimization (better optimizations across crates)
codegen-units = 1         # compiles in a single unit to allow for more cross-crate optimization
panic = "unwind"           # removes support for backtraces (reduces size)
strip = "symbols"         # removes debug symbols (requires Rust 1.70+)
