[package]
name = "config-unmanaged"
version = "5.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.100"

fltk = { version = "1.5.17", features = ["fltk-bundled"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }

[build-dependencies]
builder = { path = "../builder" }

[profile.release]
opt-level = "z"            # For size (use "s" for speed if size is not critical)
lto = true                 # Link Time Optimization (better optimizations across crates)
codegen-units = 1         # compiles in a single unit to allow for more cross-crate optimization
panic = "unwind"           # removes support for backtraces (reduces size)
strip = "symbols"         # removes debug symbols (requires Rust 1.70+)
