[package]
name = "config-unmanaged"
version = "5.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.100"

fltk = { version = "1.5.17", features = ["fltk-bundled"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }

[build-dependencies]
builder = { path = "../builder" }
