[package]
name = "uds-actor-service"
version = "5.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.100"

# Async runtime
tokio = { version = "1.47.1", features = ["macros", "rt", "time", "signal", "process"] }

rustls = { version = "0.23.32", features = ["ring"] }

reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "system-proxy"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

chrono = { version = "0.4.42", features = ["serde"] }

ipnetwork = "0.21.1"
shlex = "1.3.0"

[build-dependencies]
builder = { path = "../builder" }

[dev-dependencies]
mockito = "1.7.0"
tower = "0.5.2"
hyper = "1.7.0"


