[package]
name = "shared"
version = "5.0.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# Windows dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_SystemInformation",
    "Win32_System_Shutdown",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
    # We need all three for network adapter enumeration
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_Services",
    "Win32_System_EventLog",

] }
widestring = "1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.11.0"
whoami = "1.6.1"
libc = "0.2.176"
libloading = "0.8.9"

[dependencies.macros]
path = "../macros"

[dependencies]
# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "local-time"] }
tracing-log = "0.2.0"

anyhow = "1.0.100"
chrono = { version = "0.4.42" }

# Gui
fltk = { version = "^1.5", features = ["fltk-bundled"] }

tokio = { version = "1.47.1", features = ["macros", "rt", "time", "sync", "signal"] }

async-trait = "0.1"
