[package]
name = "shared"
version = "5.0.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# Windows dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_SystemInformation",
    "Win32_System_Shutdown",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
    # We need all three for network adapter enumeration
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_Services",
    "Win32_System_EventLog",

] }
widestring = "1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.11.0"
whoami = "1.6.1"
libc = "0.2.176"
libloading = "0.8.9"

[dependencies.macros]
path = "../macros"

[dependencies]
# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "local-time",
] }
tracing-log = "0.2.0"

anyhow = "1.0.100"
chrono = { version = "0.4.42" }

# Gui
fltk = { version = "^1.5", features = ["fltk-bundled"] }

reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
    "system-proxy",
] }


rustls = "0.23.32"
async-trait = "0.1"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "time",
    "sync",
    "signal",
] }
rustls-native-certs = "0.8.1"
tokio-rustls = "0.26.4"

axum = { version = "0.8.4", features = ["json", "tokio", "ws"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }

# Web services
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
futures-util = "0.3.31"

# json
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


[dev-dependencies]
mockito = "1.7.0"
tower = "0.5.2"
hyper = "1.7.0"


[build-dependencies]
chrono = "0.4.42"
