[package]
name = "udsactor-unmanaged-config"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.100"

# Gui
fltk = { version = "1.5.19", features = ["fltk-bundled"] }

reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }

[build-dependencies]
builder = { path = "../builder" }
