[package]
name = "udsactor-unmanaged-config"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }

# Gui
slint = { workspace = true }
rfd = { workspace = true }

reqwest = { workspace = true }

[build-dependencies]
builder = { path = "../builder" }
slint-build = { workspace = true }
