[package]
name = "udsactor-service"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.100"

# Async runtime
tokio = { version = "1.51", features = ["macros", "rt", "time", "signal", "process"] }

rustls = { version = "0.23.32", features = ["ring"] }

reqwest = { version = "0.13.2", features = ["json", "rustls", "system-proxy"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

chrono = { version = "0.4.42", features = ["serde"] }

ipnetwork = "0.21.1"
shlex = "1.3.0"

[build-dependencies]
builder = { path = "../builder" }

[dev-dependencies]
mockito = "1.7.0"
tower = "0.5.2"
hyper = "1.7.0"
serial_test = "3.2.0"
