[package]
name = "udsactor-service"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }

# Async runtime
tokio = { version = "1.51", features = ["macros", "rt", "time", "signal", "process"] }

rustls = { workspace = true }

reqwest = { version = "0.13.2", features = ["json", "rustls", "system-proxy"] }

serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }

ipnetwork = { workspace = true }
shlex = { workspace = true }

[build-dependencies]
builder = { path = "../builder" }

[dev-dependencies]
mockito = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
serial_test = { workspace = true }
